<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccelerationFilter</string>
    <string name="action_settings">Settings</string>
    <string name="filter_settings">Filters</string>
    <string name="filter_help">Help</string>
    <string name="low_pass_filter_label">LowPassFilter</string>
    <string name="mean_filter_label">MeanFilter</string>
    <string name="acceleration_name">Acceleration</string>
    <string name="sensor_name">Sensor</string>
    <string name="developer_url">KircherElectronics.com</string>
    <string name="log_data_label">Log</string>
    <string name="default_value">0.00</string>
    <string name="rms_accel_label">RMS Accel:</string>
    <string name="rms_wiki_label">RMS Wiki:</string>
    <string name="rms_and_dev_label">RMS AndDev:</string>
    <string name="rms_static">RMS Static:</string>
    <string name="rms_dynamic">RMS Dynamic:</string>
    <string name="dynamic_alpha">Dynamic Alpha</string>
    <string name="filter_active_label">Filter Active</string>
    <string name="time_constant_label">Time Constant</string>
    <string name="vector_label">Vector</string>
    <string name="plot_label">Plot</string>
    <string name="invert_axis_label">Invert Axis</string>
    <string name="done_label">Done</string>
    <string name="frequency_label">Frequency:</string>

    <string-array name="frequency_array">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>

</resources>