<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_log_data"
        android:title="@string/log_data_label"/>
    <item
        android:id="@+id/action_vector"
        android:title="@string/vector_label"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/menu_settings_filter"
                android:title="@string/filter_settings"/>
            <item
                android:id="@+id/action_settings_sensor"
                android:title="@string/sensor_name"/>
            <item
                android:id="@+id/menu_settings_help"
                android:title="@string/filter_help"/>
        </menu>
    </item>

</menu>