<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true" >

                    <TextView
                        android:id="@+id/label_filter_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/acceleration_name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/dark_orange" />

                    <TextView
                        android:id="@+id/label_filter_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/label_filter_name"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/sensor_name"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" >

                    <TableLayout
                        android:id="@+id/table_statistics_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:id="@+id/table_statistics_left_row_0"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="2dip" >

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:layout_weight="1" >

                                <TextView
                                    android:id="@+id/label_x_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="X:"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <TextView
                                    android:id="@+id/value_x_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toRightOf="@+id/label_x_axis"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="0.00"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" >

                                <TextView
                                    android:id="@+id/label_y_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="Y:"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <TextView
                                    android:id="@+id/value_y_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toRightOf="@+id/label_y_axis"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="0.00"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_weight="1" >

                                <TextView
                                    android:id="@+id/label_z_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="Z:"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <TextView
                                    android:id="@+id/value_z_axis"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toRightOf="@+id/label_z_axis"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="0.00"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />
                            </RelativeLayout>
                        </TableRow>
                    </TableLayout>
                </RelativeLayout>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <com.androidplot.xy.XYPlot
                android:id="@+id/plot_sensor"
                android:layout_width="fill_parent"
                android:layout_height="220dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                title="Acceleration" />

            <com.androidplot.xy.XYPlot
                android:id="@+id/plot_noise"
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                title="RMS Noise" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:id="@+id/data_log_icon_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/data_rms_layout" >

                    <ImageView
                        android:id="@+id/icon_logger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/icon_logger" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/data_rms_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true" >

                    <RelativeLayout
                        android:id="@+id/layout_statistics_rms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" >

                            <TableLayout
                                android:id="@+id/table_statistics_rms_left"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" >

                                <TableRow
                                    android:id="@+id/table_statistics_rms_left_row_0"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="2dip" >

                                    <RelativeLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="20dp"
                                        android:layout_weight="1" >

                                        <TextView
                                            android:id="@+id/label_rms_acceleration"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentLeft="true"
                                            android:fontFamily="sans-serif-condensed"
                                            android:text="@string/rms_accel_label"
                                            android:textAppearance="?android:attr/textAppearanceSmall" />

                                        <TextView
                                            android:id="@+id/value_rms_acceleration"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_toRightOf="@+id/label_rms_acceleration"
                                            android:fontFamily="sans-serif-condensed"
                                            android:text="@string/default_value"
                                            android:textAppearance="?android:attr/textAppearanceSmall" />
                                    </RelativeLayout>

                                    <RelativeLayout
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1" >

                                        <TextView
                                            android:id="@+id/label_rms_lpf_wiki"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentLeft="true"
                                            android:fontFamily="sans-serif-condensed"
                                            android:text="@string/rms_wiki_label"
                                            android:textAppearance="?android:attr/textAppearanceSmall" />

                                        <TextView
                                            android:id="@+id/value_rms_lpf_wiki"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_toRightOf="@+id/label_rms_lpf_wiki"
                                            android:fontFamily="sans-serif-condensed"
                                            android:text="@string/default_value"
                                            android:textAppearance="?android:attr/textAppearanceSmall" />
                                    </RelativeLayout>

                                    <RelativeLayout
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="20dp"
                                        android:layout_weight="1" >

                                        <TextView
                                            android:id="@+id/label_rms_lpf_and_dev"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignParentLeft="true"
                                            android:fontFamily="sans-serif-condensed"
                                            android:text="@string/rms_and_dev_label"
                                            android:textAppearance="?android:attr/textAppearanceSmall" />

                                        <TextView
                                            android:id="@+id/value_rms_lpf_and_dev"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_toRightOf="@+id/label_rms_lpf_and_dev"
                                            android:fontFamily="sans-serif-condensed"
                                            android:text="@string/default_value"
                                            android:textAppearance="?android:attr/textAppearanceSmall" />
                                    </RelativeLayout>
                                </TableRow>
                            </TableLayout>
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/color_bar" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" >

                        <ImageView
                            android:id="@+id/image_developer_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:src="@drawable/ke_icon" />

                        <TextView
                            android:id="@+id/label_developer_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/image_developer_icon"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/developer_url"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/color_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" >

                        <ImageView
                            android:id="@+id/image_color_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/color_bar" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>